--- a/src/styles/seiyria-slider/slider.html
+++ b/src/styles/seiyria-slider/slider.html
@@ -28,7 +28,11 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
     <link
-      href="../styles/architectui-html-free/architectui-html-free/main.css"
+      href="../architectui-html-free/architectui-html-free/main.css"
+      rel="stylesheet"
+    />
+    <link
+      href="./bootstrap-slider/dist/css/bootstrap-slider.min.css"
       rel="stylesheet"
     />
     <style type="text/css">
@@ -783,6 +787,13 @@
                     <div class="card-body">
                       <h5 class="card-title">CSCI 1800</h5>
                       <h6 class="card-subtitle">Feedback Statistics</h6>
+                      <input
+                        id="ex13"
+                        type="text"
+                        data-slider-ticks="[0, 100, 200, 300, 400]"
+                        data-slider-ticks-snap-bounds="30"
+                        data-slider-ticks-labels='["$0", "$100", "$200", "$300", "$400"]'
+                      />
                       <div class="text-left">Organisation</div>
                       <div class="text-center">Poor</div>
                       <div class="mb-3 progress">
@@ -1152,6 +1163,14 @@
 
     <div class="jvectormap-tip"></div>
     <!-- Code injected by live-server -->
+    <script src="./bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script>
+      var slider = new Slider("#ex13", {
+        ticks: [0, 100, 200, 300, 400],
+        ticks_labels: ["$0", "$100", "$200", "$300", "$400"],
+        ticks_snap_bounds: 30,
+      });
+    </script>
     <script type="text/javascript">
       // <![CDATA[  <-- For SVG support
       if ("WebSocket" in window) {
