minor changes on jobs.html

--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -147,7 +147,7 @@
 						<!-- Search box -->
 						<div class = "row">
 							<div class="page-title-wrapper">
-							<button class="mb-2 mr-2 btn btn-primary btn-lg btn-block" onclick="search.html">Search Job Postings</button>
+							<button class="mb-2 mr-2 btn btn-primary btn-lg btn-block" onclick="location.href='search.html';">Search Job Postings</button>
 							</div
 							
 						</div>
