Completed layout for Professor dashboard. Ready to roll

--- a/src/screens/TAcourses.html
+++ b/src/screens/TAcourses.html
@@ -1,3 +1,4 @@
+<!-- Courses will show on click in TA.html. Used to show a list of courses that TA is teaching. -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
