--- a/src/screens/jobposting.html
+++ b/src/screens/jobposting.html
@@ -1,3 +1,5 @@
+<!-- The job posting for both prof.html and jobs.html
+Use to display a list of jobs. -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
