Added some comments and definition of what the file do.

--- a/src/screens/index.html
+++ b/src/screens/index.html
@@ -1,1 +1,1 @@
-<!-- This is a login page. Please put in the login code. -->
+<!-- This is a login page. Please put in the login code by Nh and Ab-->
