--- a/src/screens/jobid.html
+++ b/src/screens/jobid.html
@@ -1,3 +1,4 @@
+<!-- Used when a user clicked in the job ID hyperlinks -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
