--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -1,4 +1,4 @@
-<!-- Courses will show on click in prof.html -->
+<!-- Courses will show on click in prof.html. Show courses that a prof is teaching. -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
