--- a/src/screens/pfeedback.html
+++ b/src/screens/pfeedback.html
@@ -1,4 +1,4 @@
-<!-- Feedback will show on click in prof.html -->
+<!-- Feedback will show on click in prof.html. USed to allow prof see and provide feedback to a TA. -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
