--- a/src/screens/postjob.html
+++ b/src/screens/postjob.html
@@ -1,4 +1,4 @@
-<!-- USed by professor to post a job in details -->
+<!-- USed by professor to post a job in details (In prof.html) -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
