--- a/src/screens/search.html
+++ b/src/screens/search.html
@@ -1,3 +1,4 @@
+<!-- Search bar in Jobs.html. Used to filter the jobs -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
