--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -1,3 +1,4 @@
+<!-- TA main Dashboard and profile page -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
