--- a/src/screens/apply.html
+++ b/src/screens/apply.html
@@ -1,3 +1,4 @@
+<!-- Page use in job.html. Used for Students apply for a job. -->
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
