add calendar to dashboards

--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
     <meta name="description" content="This is an example dashboard created using build-in elements and components.">
     <meta name="msapplication-tap-highlight" content="no">
+<link href="../styles/custom-styles/styles.calendar.css" rel="stylesheet">
 <link href="./main.css" rel="stylesheet"><style type="text/css">
 /* Chart.js */
 @-webkit-keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}
@@ -166,8 +167,29 @@
 							<!-- Calendar by Su -->
                             <div class="col-md-12 col-lg-6">
                                 <div class="mb-3 card">
-                                    
-                                    
+                                    <div class="calendar__header">
+                                        <div class="card-title">Mon</div>
+                                        <div class="card-title">Tue</div>
+                                        <div class="card-title">Wed</div>
+                                        <!-- <div>thu</div>
+                                        <div>fri</div>
+                                        <div>sat</div>
+                                        <div>sun</div> -->
+                                      </div>
+                                      <div class="calendar__week">
+                                        <div class="calendar__day">
+                                          <div class="calender_date card-title">1</div>
+                                          <p class="card-subtitle">11:35-12:25 <br> Busy</p>
+                                        </div>
+                                        <div class="calendar__day">
+                                          <div class="calender_date card-title">2</div>
+                                          <p class="card-subtitle">2:25-3:55 <br> Busy</p>
+                                        </div>
+                                        <div class="calendar__day">
+                                          <div class="calender_date card-title">3</div>
+                                          <p class="card-subtitle">4:35-5:25 <br> Busy</p>
+                                        </div>
+                                      </div> 
                                 </div>
                             </div>
                         </div>
