Changes section to Courses and added in data

--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -171,6 +171,60 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Courses and Feedback by Ab-->
+                        <div class="row">
+                            <div class="main-card mb-3 card">
+                                <div class="card-body row align-items-center justify-content-between">
+                                  <h5 class="card-title">Courses</h5>
+                                  <button type="button" class="btn mr-2 mb-2 btn-primary">
+                                    Feedback
+                                  </button>
+                                  <div class="table-responsive">
+                                    <table class="mb-0 table table-hover">
+                                      <thead>
+                                        <tr>
+                                          <th>#</th>
+                                          <th>Course Name</th>
+                                          <th>Course ID</th>
+                                          <th>Office Hours</th>
+                                          <th>TA & Markers</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr>
+                                          <th scope="row">1</th>
+                                          <td>Web Development I</td>
+                                          <td>CSCI 1180</td>
+                                          <td>TWF 12:30-14:30</td>
+                                          <td>
+                                            Surya, Howard
+                                          </td>
+                                        </tr>
+                                        <tr>
+                                          <th scope="row">2</th>
+                                          <td>Network Computing II</td>
+                                          <td>CSCI 1183</td>
+                                          <td>TWF 12:30-14:30</td>
+                                          <td>
+                                            Nhat, Zhaohe
+                                          </td>
+                                        </tr>
+                                        <tr>
+                                          <th scope="row">3</th>
+                                          <td>Intro to Robotics</td>
+                                          <td>CSCI 1186</td>
+                                          <td>TWF 12:30-14:30</td>
+                                          <td>
+                                            Abdullah, Howard, Nhat
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
 						
 						<!-- Recent job postings by ZH-->
                         <div class="row">
