--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -143,7 +143,7 @@
                 </ul>
               </div>
               <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 706px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 589px;"></div></div></div>
-            </div>    <div class="app-main__outer"></div>
+            </div>    <div class="app-main__outer">
             <div class="app-main__inner">
               <!-- Prof courses by Nh -->
 
@@ -318,6 +318,7 @@
               </div>
 
             </div>
+          </div>
           </div>
 
         </div>
