--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -143,19 +143,18 @@
                             </ul>
                         </div>
                     <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 706px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 589px;"></div></div></div>
-                </div>    <div class="app-main__outer"></div>
+                </div>    <div class="app-main__outer">
                     <div class="app-main__inner">
 						<!-- Search box -->
 						<div class = "row">
 							<div class="page-title-wrapper">
 							<button class="mb-2 mr-2 btn btn-primary btn-lg btn-block" onclick="location.href='search.html';">Search Job Postings</button>
-							</div
-							
-						</div>
+							</div>
+                        </div>
 						<!-- This is the recent job postings by ZH -->
                         <div class="row">
                             <div class="main-card mb-3 card">
-    <div class="card-body"><h5 class="card-title">Jobs</h5>
+    <div class="card-body"><h5 class="card-title">Recent postings</h5>
         <table class="mb-0 table table-hover table-responsive">
             <thead>
                 <tr>
