--- a/src/screens/pprofile.html
+++ b/src/screens/pprofile.html
@@ -143,7 +143,7 @@
                             </ul>
                         </div>
                     <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 706px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 589px;"></div></div></div>
-                </div>    <div class="app-main__outer"></div>
+                </div>    <div class="app-main__outer">
                     <div class="app-main__inner">
 						<!-- This is the basic information tab by Su -->
                         <div class="row">
@@ -237,9 +237,10 @@
             <thead>
                 <tr>
                     <th>Job ID</th>
-                    <th>CRN</th>
+                    <th>Course ID</th>
                     <th>Applicants</th>
                     <th>Deadline</th>
+                    <th>Details</th>
                 </tr>
             </thead>
             <tbody>
@@ -248,24 +249,28 @@
                     <td>CSCI 1120</td>
                     <td class="badge">13</td>
                     <td>2077-02-31 12.00</td>
+                    <td><button class="mb-2 mr-2 btn-transition btn btn-outline-secondary">View</button></td>
                 </tr>
                 <tr>
                     <th scope="row">99998</th>
                     <td>CSCI 1120</td>
                     <td class="badge">17</td>
                     <td>2077-02-31 12.00</td>
+                    <td><button class="mb-2 mr-2 btn-transition btn btn-outline-secondary">View</button></td>
                 </tr>
                 <tr>
                     <th scope="row">99997</th>
                     <td>CSCI 1120</td>
                     <td class="badge">15</td>
                     <td>2077-02-31 12.00</td>
+                    <td><button class="mb-2 mr-2 btn-transition btn btn-outline-secondary">View</button></td>
                 </tr>
                 <tr>
                     <th scope="row">99996</th>
                     <td>CSCI 1120</td>
                     <td class="badge">18</td>
                     <td>2077-02-31 12.00</td>
+                    <td><button class="mb-2 mr-2 btn-transition btn btn-outline-secondary">View</button></td>
                 </tr>
             </tbody>
         </table>
@@ -281,7 +286,8 @@
             <thead>
                 <tr>
                     <th>Job ID</th>
-                    <th>CRN</th>
+                    <th>Course ID</th>
+                    <th>Interviewee</th>
                     <th>Date of Interview</th>
                 </tr>
             </thead>
@@ -289,16 +295,20 @@
                 <tr>
                     <th scope="row">99999</th>
                     <td>CSCI 1120</td>
+                    <td>First Last</td>
+                    <td>2077-02-31 12.00</td>
+                </tr>
+                <tr>
+                    <th scope="row">99999</th>
+
+                    <td>CSCI 1120</td>
+                    <td>First Last</td>
                     <td>2077-02-31 12.00</td>
                 </tr>
                 <tr>
                     <th scope="row">99999</th>
                     <td>CSCI 1120</td>
-                    <td>2077-02-31 12.00</td>
-                </tr>
-                <tr>
-                    <th scope="row">99999</th>
-                    <td>CSCI 1120</td>
+                    <td>First Last</td>
                     <td>2077-02-31 12.00</td>
                 </tr>
             </tbody>
@@ -307,7 +317,8 @@
 </div>		
                         </div>
                     </div>
-                        </div>
+                </div>
+                        
                 
         </div>
     </div>
