--- a/src/screens/ta-profile.html
+++ b/src/screens/ta-profile.html
@@ -143,7 +143,7 @@
                             </ul>
                         </div>
                     <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 706px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 589px;"></div></div></div>
-                </div>    <div class="app-main__outer"></div>
+                </div>    <div class="app-main__outer">
                     <div class="app-main__inner">
 						<!-- This is the basic information tab by Su -->
                         <div class="row">
@@ -168,7 +168,7 @@
         <table class="mb-0 table table-hover table-responsive">
             <thead>
                 <tr>
-                    <th>CRN</th>
+                    <th>Course ID</th>
                     <th>Course Details</th>
                     <th>Date created</th>
                 </tr>
@@ -238,7 +238,7 @@
             <thead>
                 <tr>
                     <th>Job ID</th>
-                    <th>CRN</th>
+                    <th>Course ID</th>
                     <th>Status</th>
                     <th>Applied Date</th>
                     <th>Files Upload</th>
@@ -246,28 +246,28 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row">99999</th>
+                    <th scope="row"><a data-toggle="modal" href="#jobPostModal">99999</a></th>
                     <td>CSCI 1120</td>
                     <td><div class="mb-2 mr-2 badge badge-success">Approved</div></td>
                     <td>2077-02-31 12.00</td>
                     <td>xxx.pdf</td>
                 </tr>
                 <tr>
-                    <th scope="row">99998</th>
+                    <th scope="row"><a data-toggle="modal" href="#jobPostModal">99999</a></th>
                     <td>CSCI 1120</td>
                     <td><div class="mb-2 mr-2 badge badge-primary">Recieved</div></td>
                     <td>2077-02-31 12.00</td>
                     <td>xxx.pdf</td>
                 </tr>
                 <tr>
-                    <th scope="row">99997</th>
+                    <th scope="row"><a data-toggle="modal" href="#jobPostModal">99999</a></th>
                     <td>CSCI 1120</td>
                     <td><div class="mb-2 mr-2 badge badge-danger">Not Approved</div></td>
                     <td>2077-02-31 12.00</td>
                     <td>xxx.pdf</td>
                 </tr>
                 <tr>
-                    <th scope="row">99996</th>
+                    <th scope="row"><a data-toggle="modal" href="#jobPostModal">99999</a></th>
                     <td>CSCI 1120</td>
                     <td><div class="mb-2 mr-2 badge badge-info">Interview</div></td>
                     <td>2077-02-31 12.00</td>
@@ -287,7 +287,7 @@
             <thead>
                 <tr>
                     <th>Job ID</th>
-                    <th>CRN</th>
+                    <th>Course ID</th>
                     <th>Date of Interview</th>
                 </tr>
             </thead>
