--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -150,7 +150,7 @@
               <div class = "row">
 
                 <div class="col-xl-auto">
-                  <div class="main-card mb-3 card"><h4>Semester A/Year</h4>
+                  <div class="main-card mb-3 card"><h4>Winter 2020</h4>
                     <div class="card-body"><h5 class="card-title">Course A</h5>
                       <table class="mb-0 table table-hover table-responsive">
                         <thead>
@@ -158,7 +158,7 @@
                             <th>#</th>
                             <th>CRN</th>
                             <th>Name</th>
-                            <th>Dal ID</th>
+                            <th>B00 Number</th>
                             <th>Position</th>
                             <th>Total hours</th>
                           </tr>
@@ -198,7 +198,7 @@
                             <th>#</th>
                             <th>CRN</th>
                             <th>Name</th>
-                            <th>Dal ID</th>
+                            <th>B00 Number</th>
                             <th>Position</th>
                             <th>Total hours</th>
                           </tr>
@@ -232,7 +232,7 @@
                       </table>
                     </div>
                   </div>
-                  <div class="main-card mb-3 card"><h4>Semester B/Year</h4>
+                  <div class="main-card mb-3 card"><h4>Fall 2019</h4>
                     <div class="card-body"><h5 class="card-title">Course A</h5>
                       <table class="mb-0 table table-hover table-responsive">
                         <thead>
@@ -240,7 +240,7 @@
                             <th>#</th>
                             <th>CRN</th>
                             <th>Name</th>
-                            <th>Dal ID</th>
+                            <th>B00 Number</th>
                             <th>Position</th>
                             <th>Total hours</th>
                           </tr>
@@ -280,7 +280,7 @@
                             <th>#</th>
                             <th>CRN</th>
                             <th>Name</th>
-                            <th>Dal ID</th>
+                            <th>B00 Number</th>
                             <th>Position</th>
                             <th>Total hours</th>
                           </tr>
