Fixed some errors about the layout.

--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -117,7 +117,7 @@
                                 
 								
                                 <li>
-                                    <a href="profile.html" class="mm-active">
+                                    <a href="ta-profile.html" class="mm-active">
                                         <i class="metismenu-icon pe-7s-user"></i>
                                         My profile
                                     </a>
