--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -108,7 +108,7 @@
                 <ul class="vertical-nav-menu metismenu">
 
                   <li>
-                    <a href="profile.html">
+                    <a href="prof.html">
                       <i class="metismenu-icon pe-7s-user"></i>
                       My profile
                     </a>
@@ -124,9 +124,18 @@
                     </a>
 
                   </li>
+				  
+				  <li>
+										<a href="jobposting.html">
+											<i class="metismenu-icon pe-7s-file"></i>
+											View Jobs
+
+										</a>
+
+									</li>
 
                   <li>
-                    <a href="pcourses.html" class="mm-active">
+                    <a href="#" class="mm-active">
                       <i class="metismenu-icon pe-7s-id"></i>
                       Courses
                     </a>
