--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -110,7 +110,7 @@
 
 
 									<li>
-										<a href="profile.html" class="mm-active">
+										<a href="#" class="mm-active">
 											<i class="metismenu-icon pe-7s-user"></i>
 											My profile
 										</a>
@@ -208,7 +208,6 @@
                                     </div> 
                                 </div>
                             </div>
-                        </div>
 
                         <!-- Courses and Feedback by Ab-->
                         <div class="row">
@@ -321,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-                
+                </div>
             </div>
         </div>
     <script type="text/javascript" src="./assets/scripts/main.js"></script>
