--- a/src/screens/jobposting.html
+++ b/src/screens/jobposting.html
@@ -144,19 +144,20 @@ Use to display a list of jobs. -->
                             </ul>
                         </div>
                     <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 706px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 589px;"></div></div></div>
-                </div>    <div class="app-main__outer"></div>
+                </div>    
+				<div class="app-main__outer">
                     <div class="app-main__inner">
 						<!-- Use the same layout as Saved job posting on jobs.html by ZH -->
 						<div class = "row">
 							<div class="main-card mb-3 card">
-    <div class="card-body"><h5 class="card-title">Post Detail</h5>
-        <table class="mb-0 table table-bordered">
-            <tbody>
-                <tr>
-                    <th scope="row">Job ID</th>
-                    <td>99999</td>
-                </tr>
-                <tr>
+						<div class="card-body"><h5 class="card-title">Post Detail</h5>
+						<table class="mb-0 table table-bordered">
+						<tbody>
+						<tr>
+						<th scope="row">Job ID</th>
+						<td>99999</td>
+						</tr>
+						<tr>
                     <th scope="row">Job Title</th>
                     <td>TA for Introduction to Computer Science</td>
                 </tr>
@@ -199,6 +200,7 @@ Use to display a list of jobs. -->
                 </tr>
             </tbody>
         </table>
+		</div>
     </div>
 </div>
 						</div>
