--- a/src/screens/pfeedback.html
+++ b/src/screens/pfeedback.html
@@ -181,7 +181,7 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="profile.html">
+                  <a href="prof.html">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My profile
                   </a>
@@ -193,7 +193,14 @@
                     Post a Job
                   </a>
                 </li>
+				<li>
+										<a href="jobposting.html">
+											<i class="metismenu-icon pe-7s-file"></i>
+											View Jobs
 
+										</a>
+
+									</li>
                 <li>
                   <a href="pcourses.html">
                     <i class="metismenu-icon pe-7s-id"></i>
@@ -202,7 +209,7 @@
                 </li>
 
                 <li>
-                  <a href="pfeedback.html" class="mm-active">
+                  <a href="#" class="mm-active">
                     <i class="metismenu-icon pe-7s-file"></i>
                     Feedback
                   </a>
