--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -110,7 +110,7 @@
 
 
 									<li>
-										<a href="profile.html" class="mm-active">
+										<a href="pprofile.html" class="mm-active">
 											<i class="metismenu-icon pe-7s-user"></i>
 											My profile
 										</a>
