Fixed the logo and my Profile.

--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -57,7 +57,8 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div class="logo-src"></div>
+          <div><h5>DALTAMS</h5></div>
+			<div><h6>TA Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
@@ -135,7 +136,8 @@
       <div class="app-main">
         <div class="app-sidebar sidebar-shadow">
           <div class="app-header__logo">
-            <div class="logo-src"></div>
+            <div><h5>DALTAMS</h5></div>
+			<div><h6>TA Dashboard</h6></div>
             <div class="header__pane ml-auto">
               <div>
                 <button
@@ -165,7 +167,8 @@
         </div>                <div class="app-main">
                 <div class="app-sidebar sidebar-shadow">
                     <div class="app-header__logo">
-                        <div class="logo-src"></div>
+                        <div><h5>DALTAMS</h5></div>
+						<div><h6>TA Dashboard</h6></div>
                         <div class="header__pane ml-auto">
                             <div>
                                 <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
@@ -208,7 +211,7 @@
                                 <li>
                                     <a href="ta-profile.html" class="mm-active">
                                         <i class="metismenu-icon pe-7s-user"></i>
-                                        My profile
+                                        My Dashboard
                                     </a>
                                     
                                 </li>
