--- a/src/screens/TAfeedback.html
+++ b/src/screens/TAfeedback.html
@@ -16,7 +16,8 @@
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         <div class="app-header header-shadow">
             <div class="app-header__logo">
-                <div class="logo-src"></div>
+                <div><h5>DALTAMS</h5></div>
+				<div><h6>TA Feedback</h6></div>
                 <div class="header__pane ml-auto">
                     <div>
                         <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
