--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -16,7 +16,8 @@
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         <div class="app-header header-shadow">
             <div class="app-header__logo">
-                <div class="logo-src"></div>
+                <div><h5>DALTAMS</h5></div>
+				<div><h6>Student Dashboard</h6></div>
                 <div class="header__pane ml-auto">
                     <div>
                         <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
@@ -118,7 +119,7 @@
                                 <li>
                                     <a href="profile.html">
                                         <i class="metismenu-icon pe-7s-user"></i>
-                                        My profile
+                                        My Dashboard
                                     </a>
                                     
                                 </li>
