--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Jobs dashboard</title>
+    <title>Prof Dashboard</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
@@ -56,7 +56,8 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div class="logo-src"></div>
+          <div><h5>DALTAMS</h5></div>
+		<div><h6>Professor Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
