Fixed card dissappearing issue

--- a/src/screens/indivJobDet.html
+++ b/src/screens/indivJobDet.html
@@ -150,7 +150,7 @@ Use to display a list of jobs. -->
                     <div class="app-main__inner">
 						<!-- Use the same layout as Saved job posting on jobs.html by ZH -->
 						<div class = "row">
-							<div class="main-card mb-3 card">
+							<div class="main-card mb-3 col-md-8 card">
 						<div class="card-body"><h5 class="card-title">Post Detail</h5>
 						<table class="mb-0 table table-bordered">
 						<tbody>
