--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -57,7 +57,7 @@
       <div class="app-header header-shadow">
         <div class="app-header__logo">
           <div><h5>DALTAMS</h5></div>
-		<div><h6>Professor Dashboard</h6></div>
+          <div><h6>Professor Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
@@ -149,58 +149,6 @@
                 </button>
               </div>
             </div>
-<<<<<<< HEAD
-            <div class="app-header__menu">
-              <span>
-                <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                  <span class="btn-icon-wrapper">
-                    <i class="fa fa-ellipsis-v fa-w-6"></i>
-                  </span>
-                </button>
-              </span>
-            </div>    <div class="scrollbar-sidebar ps ps--active-y">
-              <div class="app-sidebar__inner">
-                <ul class="vertical-nav-menu metismenu">
-
-                  <li>
-                    <a href="prof.html">
-                      <i class="metismenu-icon pe-7s-user"></i>
-                      My profile
-                    </a>
-
-                  </li>
-
-
-                  <li>
-                    <a href="postjob.html">
-                      <i class="metismenu-icon pe-7s-file"></i>
-                      Post a Job
-
-                    </a>
-
-                  </li>
-				  
-				  <li>
-										<a href="jobposting.html">
-											<i class="metismenu-icon pe-7s-file"></i>
-											View Jobs
-
-										</a>
-
-									</li>
-
-                  <li>
-                    <a href="#" class="mm-active">
-                      <i class="metismenu-icon pe-7s-id"></i>
-                      Courses
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href="pfeedback.html">
-                      <i class="metismenu-icon pe-7s-file"></i>
-                      Feedback
-=======
           </div>
           <div class="app-header__mobile-menu">
             <div>
@@ -230,12 +178,11 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="profile.html">
+                  <a href="Prof.html">
                     <i class="metismenu-icon pe-7s-user"></i>
-                    My profile
+                    My Dashboard
                   </a>
                 </li>
->>>>>>> d8a11f679d522f27bfa6e20e80630bdc0e94d7da
 
                 <li>
                   <a href="postjob.html">
