Removed feedback link

--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -185,23 +185,16 @@
                 </li>
 
                 <li>
-                  <a href="postjob.html">
+                  <a href="jobposting.html">
                     <i class="metismenu-icon pe-7s-file"></i>
-                    Post a Job
+                    View
                   </a>
                 </li>
 
                 <li>
                   <a href="pcourses.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-id"></i>
-                    Courses
-                  </a>
-                </li>
-
-                <li>
-                  <a href="pfeedback.html">
-                    <i class="metismenu-icon pe-7s-file"></i>
-                    Feedback
+                    My Courses
                   </a>
                 </li>
               </ul>
