Fixed linking issues

--- a/src/screens/TAcourses.html
+++ b/src/screens/TAcourses.html
@@ -117,28 +117,19 @@
 
 
                   <li>
-                    <a href="profile.html">
+                    <a href="TA.html">
                       <i class="metismenu-icon pe-7s-user"></i>
-                      My profile
+                      My Dashboard
                     </a>
 
                   </li>
-
-
                   <li>
                     <a href="courses.html" class="mm-active">
                       <i class="metismenu-icon pe-7s-file"></i>
-                      Courses
+                      My Courses
 
                     </a>
 
-                  </li>
-
-                  <li>
-                    <a href="feedback.html" class="mm-active">
-                      <i class="metismenu-icon pe-7s-id"></i>
-                      Feedback
-                    </a>
                   </li>
                 </ul>
               </div>
