--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -187,7 +187,7 @@
                 <li>
                   <a href="jobposting.html">
                     <i class="metismenu-icon pe-7s-file"></i>
-                    View
+                    View Jobs
                   </a>
                 </li>
 
