--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -194,16 +194,9 @@
                 </li>
 
                 <li>
-                  <a href="courses.html">
+                  <a href="TAcourses.html">
                     <i class="metismenu-icon pe-7s-file"></i>
-                    Courses
-                  </a>
-                </li>
-
-                <li>
-                  <a href="feedback.html">
-                    <i class="metismenu-icon pe-7s-id"></i>
-                    Feedback
+                    My Courses
                   </a>
                 </li>
               </ul>
