Fixed some naming issues

--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -189,7 +189,7 @@
                 <li>
                   <a href="profile.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
-                    My profile
+                    My Dashboard
                   </a>
                 </li>
 
