--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1246,7 +1246,7 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="pprofile.html" class="mm-active">
+                  <a href="Prof.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Dashboard
                   </a>
@@ -1262,7 +1262,7 @@
                 <li>
                   <a href="pcourses.html">
                     <i class="metismenu-icon pe-7s-id"></i>
-                    Courses
+                    My Courses
                   </a>
                 </li>
               </ul>
@@ -1692,27 +1692,6 @@
       }
       // ]]>
     </script>
-
-    <li>
-      <a href="postjob.html">
-        <i class="metismenu-icon pe-7s-file"></i>
-        Post a Job
-      </a>
-    </li>
-
-    <li>
-      <a href="jobposting.html">
-        <i class="metismenu-icon pe-7s-file"></i>
-        View Jobs
-      </a>
-    </li>
-
-    <li>
-      <a href="pcourses.html">
-        <i class="metismenu-icon pe-7s-id"></i>
-        Courses
-      </a>
-    </li>
 
     <div class="ps__rail-x" style="left: 0px; bottom: 0px;">
       <div
