Linked the Courses button

--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1368,9 +1368,9 @@
                   class="card-body row align-items-center justify-content-between"
                 >
                   <h5 class="card-title">Courses</h5>
-                  <button type="button" class="btn mr-2 mb-2 btn-primary">
-                    Feedback
-                  </button>
+                  <a class="btn mr-2 mb-2 btn-primary" href="pcourses.html">
+                    More
+                  </a>
                   <div class="table-responsive">
                     <table class="mb-0 table table-hover">
                       <thead>
