--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1325,40 +1325,40 @@
               <!-- Calendar by Su -->
               <div class="col-md-12 col-lg-6">
                 <div class="mb-3 card">
-				<div class="card-body">
-				<div class="card-title">Calendar</div>
-                  <div class="calendar__header">
-                    <div class="card-title">Mon</div>
-                    <div class="card-title">Tue</div>
-                    <div class="card-title">Wed</div>
-                    <!-- <div>thu</div>
+                  <div class="card-body">
+                    <div class="card-title">Calendar</div>
+                    <div class="calendar__header">
+                      <div class="card-title">Mon</div>
+                      <div class="card-title">Tue</div>
+                      <div class="card-title">Wed</div>
+                      <!-- <div>thu</div>
                                         <div>fri</div>
                                         <div>sat</div>
                                         <div>sun</div> -->
-                  </div>
-                  <div class="calendar__week">
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 1</div>
-                      <p>
-                        11:35-12:25 <br/>
-                        Busy
-                      </p>
                     </div>
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 2</div>
-                      <p>
-                        2:25-3:55 <br />
-                        Busy
-                      </p>
+                    <div class="calendar__week">
+                      <div class="calendar__day">
+                        <div class="calender_date card-title">Jul 1</div>
+                        <p>
+                          11:35-12:25 <br />
+                          Busy
+                        </p>
+                      </div>
+                      <div class="calendar__day">
+                        <div class="calender_date card-title">Jul 2</div>
+                        <p>
+                          2:25-3:55 <br />
+                          Busy
+                        </p>
+                      </div>
+                      <div class="calendar__day">
+                        <div class="calender_date card-title">Jul 3</div>
+                        <p>
+                          4:35-5:25 <br />
+                          Busy
+                        </p>
+                      </div>
                     </div>
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 3</div>
-                      <p>
-                        4:35-5:25 <br />
-                        Busy
-                      </p>
-                    </div>
-					</div>
                   </div>
                 </div>
               </div>
@@ -1595,23 +1595,21 @@
               </div>
               <div class="position-relative form-group">
                 <label for="jobDescriptionSearch" class=""
-                  >Job Discription</label
-                ><input
-                  name="jobdescription"
-                  id="jobDescriptionSearch"
-                  placeholder="Job Description"
+                  >Job Description</label
+                ><textarea
+                  name="additioninfo"
+                  id="additionInfoSearch"
                   class="form-control"
-                />
+                ></textarea>
               </div>
               <div class="position-relative form-group">
                 <label for="jobRequirementSearch" class=""
                   >Job Requirement</label
-                ><input
-                  name="jobrequirement"
-                  id="jobRequirementSearch"
-                  placeholder="Job Requirement"
+                ><textarea
+                  name="additioninfo"
+                  id="additionInfoSearch"
                   class="form-control"
-                />
+                ></textarea>
               </div>
               <div class="position-relative form-group">
                 <label for="additionInfoSearch" class="">Additional Info</label
